--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
         "ANTHROPIC_API_KEY": "${localEnv:OPENAI_API_KEY}",
         "GEMINI_API_KEY": "${localEnv:GEMINI_API_KEY}",
         "VITE_OPENAI_API_KEY": "${localEnv:OPENAI_API_KEY}",
-        "MYPY_CONFIG_FILE": "backend/mypy.ini"
+        "MYPY_CONFIG_FILE": "backend/mypy.ini",
+        "FZF_DEFAULT_COMMAND": "fdfind --type f"
     },
     "features": {
         "ghcr.io/devcontainers/features/common-utils:2": {
@@ -61,7 +62,8 @@
         "source=${localEnv:HOME}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached",
         "source=${localEnv:HOME}${localEnv:USERPROFILE}/.zsh_history,target=/home/vscode/.zsh_history,type=bind",
         "source=${localEnv:HOME}${localEnv:USERPROFILE}/.oh-my-zsh/themes,target=/home/vscode/.oh-my-zsh/themes,type=bind",
-        "source=${localEnv:HOME}${localEnv:USERPROFILE}/.aws,target=/home/vscode/.aws,type=bind, consistency=cache"
+        "source=${localEnv:HOME}${localEnv:USERPROFILE}/.aws,target=/home/vscode/.aws,type=bind, consistency=cache",
+        "source=${localEnv:HOME}${localEnv:USERPROFILE}/.config/bat,target=/home/vscode/.config/bat,type=bind"
     ],
     "forwardPorts": [5173, 8000, 6379, 5678],
     "postCreateCommand": "bash .devcontainer/post-create.sh"
